kubernetes-manifest/base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web-deploy
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - args:
            - bash
            - -c
            - while !</dev/tcp/db/5432; do sleep 1; done; uvicorn app.main:app --host 0.0.0.0
          image: ykadi/datascientestapi:v.30.0
          name: web
          ports:
            - containerPort: 8000
              hostPort: 8000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: web-claim0
      restartPolicy: Always
      volumes:
        - name: web-claim0
          persistentVolumeClaim:
            claimName: web-claim0
status: {}


---
