kubernetes-manifest/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web-svc
  namespace: dev
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    app: web
status:
  loadBalancer: {}
