kubernetes-manifest/base/web-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysvc-nodeport
  namespace: dev
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30008
